--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
     "vue": "^3.4.38",
@@ -16,9 +17,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
-    "vite": "^5.4.1",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.4",
+    "vite": "^5.4.1",
     "vite-plugin-vue-setup-extend": "^0.4.0"
   }
 }
