--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.1",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^3.2.3",
     "vue": "^3.4.38",
     "vue-router": "^4.4.3"
   },
