--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.7",
     "element-plus": "^2.8.1",
+    "express": "^4.19.2",
+    "json-server": "^1.0.0-beta.2",
+    "mongodb": "^6.8.0",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^3.2.3",
