add cors for json-server

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts","src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts","src/**/*.vue", "src/server/jsonServer.cjs"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
