--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "element-plus": "^2.8.1",
     "express": "^4.19.2",
     "json-server": "^1.0.0-beta.2",
