--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "server": "npx json-server ./src/server/data/db.json",
+    "ali-server": "npx json-server ./src/server/data/db.json --host 116.62.155.169",
     "preview": "vite preview"
   },
   "dependencies": {
