--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
+    "@types/node": "^22.5.5",
     "@vitejs/plugin-vue": "^5.1.2",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.4",
